<resources>
    <string name="app_name">Check_Yourself!</string>

    <string name="prompt_email">RUT</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_rut">Ingrese un RUT válido</string>
    <string name="error_invalid_email">Ingrese una dirección de correo válida</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">Contraseña Incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="error_password2">Las contraseñas no coinciden</string>
    <string name="error_invalid_telefono">Ingrese un numero valido (ej. +56912345678)</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="action_register">¿No tienes cuenta?    Registrarse</string>
    <string name="title_activity_main">CheckYourself!</string>

    <string name="navigation_drawer_open">Abrir barra de navegación</string>
    <string name="navigation_drawer_close">Cerrar barra de navegación</string>
    <string name="navigation_drawer_tratamiento">Tratamiento</string>
    <string name="navigation_drawer_calendario">Calendario</string>
    <string name="navigation_drawer_informacion">Información</string>
    <string name="navigation_drawer_ubicacion">Compartir ubicación</string>
    <string name="navigation_drawer_casos">Explorar otros casos</string>
    <string name="navigation_drawer_doctores">Doctores</string>
    <string name="navigation_drawer_social">Social</string>


    <string name="action_settings">Configuración</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Strings related to Register -->
    <string name="pedir_rut">Rut</string>
    <string name="pedir_nombre">Nombre y Apellido</string>
    <string name="pedir_email">Email</string>
    <string name="pedir_pass">Contraseña</string>
    <string name="pedir_pass2">Repita Contraseña</string>
    <string name="pedir_fono">Teléfono</string>
    <string name="completar_registro">Hecho!</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Mostrar Nombre</string>
    <string name="pref_default_display_name">John Doe</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">Nuevos Mensajes</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silencio</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_registro_paciente">Ingrese Datos</string>
    <string name="title_activity_register">Registrarse</string>
    <string name="title_activity_maps">Mapa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
